# daralouer-scrapers

./: .gitignore
avito-location-scrapers/: README.md  hello.py  pyproject.toml
avito-location-scrapers/avito_rentals/: scrapy.cfg
avito-location-scrapers/avito_rentals/avito_rentals/: items.py  middlewares.py  pipelines.py  settings.py
avito-location-scrapers/avito_rentals/avito_rentals/spiders/: avito_rental_data.py
avito-location-scrapers/avito_scraper/: __init__.py  scrapy.cfg
avito-location-scrapers/avito_scraper/.scrapy/httpcache/casablanca_rentals/0a/0a3837d12904e908acb013cd757114fa62c7599c/: meta  pickled_meta  request_headers  response_body  response_headers
avito-location-scrapers/avito_scraper/.scrapy/httpcache/casablanca_rentals/6d/6dba3012aa0415e9cf865675c9b01faeeaf3c310/: meta  pickled_meta  request_headers  response_body  response_headers
avito-location-scrapers/avito_scraper/avito_scraper/: items.py  middlewares.py  pipelines.py  settings.py
avito-location-scrapers/avito_scraper/avito_scraper/spiders/: casablanca_rentals.py
db/: init_schema.sql
mubawab-location-scrapers/: .gitignore  hello.py  pyproject.toml
mubawab-location-scrapers/mubawab_rentals/: scrapy.cfg
mubawab-location-scrapers/mubawab_rentals/mubawab_rentals/: items.py  middlewares.py  pipelines.py  settings.py
