[project]
name = "avito-scraper"
version = "0.1.0"
description = "Scrapy project to scrape rental real estate data from avito.ma for Casablanca"
requires-python = ">=3.8"
dependencies = [
    "scrapy>=2.11.0",
    "scrapy-user-agents>=0.1.1",
    "fake-useragent>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["avito_scraper"]
